udpate about me page, the midTitle styling, and fix the padding where there was too much paddding.

--- a/components/aboutMeContent.module.css
+++ b/components/aboutMeContent.module.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     padding-top: 8rem;
     width: 100%;
+    padding-bottom: 3rem;
 }
 
 .title {
@@ -64,7 +65,6 @@
     font-weight: 400;
     line-height: 150%;
     width: 90%;
-    padding-top: 3rem;
     /* 2.25rem */
     gap: 2rem;
 }
@@ -120,15 +120,16 @@
     line-height: 100%;
 }
 
-.midtitle {
+.midTitle {
     text-align: justify;
+    leading-trim: both;
+    text-edge: cap;
     font-family: MuseoModerno;
-    font-size: 2rem;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 700;
-    line-height: 150%;
-    /* 3rem */
-    background: var(--Title-Light-Text-Gradient, linear-gradient(180deg, #CDD4EB 0%, #F7F9FF 51.04%, #B1B7CC 100%));
+    line-height: 150%; /* 3rem */
+    background: linear-gradient(180deg, #CDD4EB 0%, #F7F9FF 51.04%, #B1B7CC 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
